# MINE

./: .gitmodules  CMakeLists.txt  README.md  run.sh
mine/: CMakeLists.txt
mine/include/: Linear.h
mine/shaders/vulkan/: Linear.comp
mine/src/: Linear.cpp
python/: requirement.txt
python/ckpts/: fcn_weights.pt
python/networks/: FCN.py  fcn.json
tests/: CMakeLists.txt
tests/LinearLayerTest/: LinearLayerTest.cpp
